Unhook event handlers on binding teardown.  Bug 403162, r+sr=sicking